--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,45 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="TextView.Noto.B20.Style" parent="">
+        <item name="android:textAppearance">@style/TextView.Noto.B20.TextAppearance</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="TextView.Noto.B12.Style" parent="">
+        <item name="android:textAppearance">@style/TextView.Noto.B12.TextAppearance</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="TextView.Noto.M14.Style" parent="">
+        <item name="android:textAppearance">@style/TextView.Noto.M14.TextAppearance</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="TextView.Noto.M12.Style" parent="">
+        <item name="android:textAppearance">@style/TextView.Noto.M12.TextAppearance</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="TextView.Noto.B20.TextAppearance" parent="">
+        <item name="android:fontFamily">@font/notosans_bold</item>
+        <item name="android:textSize">20dp</item>
+    </style>
+
+    <style name="TextView.Noto.B12.TextAppearance" parent="">
+        <item name="android:fontFamily">@font/notosans_bold</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
+    <style name="TextView.Noto.M14.TextAppearance" parent="">
+        <item name="android:fontFamily">@font/notosans_medium</item>
+        <item name="android:textSize">14dp</item>
+    </style>
+
+    <style name="TextView.Noto.M12.TextAppearance" parent="">
+        <item name="android:fontFamily">@font/notosans_medium</item>
+        <item name="android:textSize">12dp</item>
+    </style>
+
 </resources>
