--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="app_color">#FF5F49DC</color>
+    <color name="grey1">#FFF0F0F0</color>
+    <color name="grey2">#FF838383</color>
 </resources>
