[ADD] Add RecentView Resource

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="app_space_9dp">9dp</dimen>
     <dimen name="app_space_8dp">8dp</dimen>
     <dimen name="app_space_6dp">6dp</dimen>
+    <dimen name="app_space_15dp">15dp</dimen>
+    <dimen name="app_space_20dp">20dp</dimen>
 </resources>
